add platformer logic

--- a/DiveDanger/project.json
+++ b/DiveDanger/project.json
@@ -1,7 +1,8 @@
 {
-  "engine": "cocos-creator-js",
+  "engine": "cocos2d-html5",
   "packages": "packages",
   "version": "2.4.5",
-  "id": "28e56c59-6850-41f6-a57a-341ade15357b",
+  "name": "Prototype",
+  "id": "3c077398-e60a-493a-9353-bb8b0ce8e64b",
   "isNew": false
 }
