Revert "Merge branch 'platformer' into main"
This reverts commit 9e5a4a476be1b09e2435313237a6e72025ad926e, reversing
changes made to 51efaaf85f7056f00aacd3c4beebdd0e2e4f05cf.

--- a/DiveDanger/project.json
+++ b/DiveDanger/project.json
@@ -1,8 +1,7 @@
 {
-  "engine": "cocos2d-html5",
+  "engine": "cocos-creator-js",
   "packages": "packages",
   "version": "2.4.5",
-  "name": "Prototype",
-  "id": "3c077398-e60a-493a-9353-bb8b0ce8e64b",
+  "id": "28e56c59-6850-41f6-a57a-341ade15357b",
   "isNew": false
 }
