--- a/DiveDanger/settings/project.json
+++ b/DiveDanger/settings/project.json
@@ -6,7 +6,7 @@
     "default",
     "player",
     "cargo_borders",
-    "cooperation_area"
+    "interaction_area"
   ],
   "collision-matrix": [
     [
@@ -55,5 +55,6 @@
     "audience": {
       "enable": false
     }
-  }
+  },
+  "last-module-event-record-time": 1619286585133
 }
