--- a/DiveDanger/settings/project.json
+++ b/DiveDanger/settings/project.json
@@ -6,7 +6,9 @@
     "default",
     "player",
     "cargo_borders",
-    "cooperation_area"
+    "cooperation_area",
+    "engines",
+    "bullet"
   ],
   "collision-matrix": [
     [
@@ -21,12 +23,31 @@
     [
       false,
       true,
-      false
+      false,
+      null,
+      null,
+      true
     ],
     [
       false,
       true,
       false,
+      false
+    ],
+    [
+      false,
+      false,
+      false,
+      false,
+      false,
+      true
+    ],
+    [
+      false,
+      false,
+      true,
+      false,
+      true,
       false
     ]
   ],
