--- a/DiveDanger/settings/project.json
+++ b/DiveDanger/settings/project.json
@@ -11,7 +11,8 @@
     "enemy_bullet",
     "enemy",
     "rope_part",
-    "rope_end"
+    "rope_end",
+    "diver"
   ],
   "collision-matrix": [
     [
@@ -30,25 +31,38 @@
       null,
       null,
       true,
+      true,
+      true,
+      true,
       true
     ],
     [
       false,
       true,
       false,
-      false
-    ],
-    [
       false,
-      false,
-      false,
-      false,
-      false,
+      null,
+      null,
+      null,
+      null,
+      null,
       true
     ],
     [
       false,
       false,
+      false,
+      false,
+      false,
+      true,
+      null,
+      null,
+      null,
+      false
+    ],
+    [
+      false,
+      false,
       true,
       false,
       true,
@@ -57,6 +71,16 @@
     [
       false,
       false,
+      true,
+      false,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
       false,
       false,
       false,
@@ -67,6 +91,21 @@
       false,
       false,
       true,
+      false,
+      false,
+      false,
+      false,
+      false,
+      false
+    ],
+    [
+      false,
+      false,
+      true,
+      true,
+      false,
+      false,
+      false,
       false,
       false,
       false
